--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="button_text_mediatech">Медиатека</string>
     <string name="button_text_settings">Настройки</string>
     <string name="settings_title">Настройки</string>
+    <string name="search_title">Поиск</string>
     <string name="dark_theme">Темная тема</string>
     <string name="support">Написать в поддержку</string>
     <string name="send">Поделиться приложением</string>
