--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,11 @@
     <string name="title_activity_search">SearchActivity</string>
     -- strings for empty erros in the xml screen
     <string name="null_string"></string>
+    -- strings for settings activity
+    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
+    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
+    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
+    <string name="support_email">alexandrneshev@yandex.ru</string>
+    <string name="share_link">https://practicum.yandex.ru/android-developer/</string>
+    <string name="share_type">getString(R.string.support_subject)</string>
 </resources>
