--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="genre">Жанр</string>
     <string name="country">Страна</string>
     <string name="track">track</string>
+    <string name="not_available">Аудиофайл недоступен</string>
 </resources>
