--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="country">Страна</string>
     <string name="track">track</string>
     <string name="not_available">Аудиофайл недоступен</string>
+    <string name="default_duration">00:00</string>
 </resources>
