--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="not_available">Аудиофайл недоступен</string>
     <string name="default_duration">00:00</string>
     -- string for mediatech activity
+    <string name="title_mediatech">Медиатека</string>
     <string name="media_favorite_tracks_title">Избранные треки</string>
     <string name="media_playlist_title">Плейлисты</string>
     <string name="media_add_new_playlist">Новый плейлист</string>
